fix: bigger project body columns gap

--- a/src/components/Pages/Work/Project/Project.styles.scss
+++ b/src/components/Pages/Work/Project/Project.styles.scss
@@ -107,6 +107,7 @@
 
       .non-accordion {
         columns: 2;
+        column-gap: 2%;
       }
     }
   }
